fix prose spacing

--- a/assets/css/prose.css
+++ b/assets/css/prose.css
@@ -12,13 +12,21 @@
     }
   }
 
-  & :is(h1, h2, h3, h4, h5, h6) {
+  /* & :is(h1, h2, h3, h4, h5, h6) {
     margin-block-start: 5em;
+    margin-block-end: 1.5em;
+  } */
+
+  & * + :is(h1, h2, h3, h4, h5, h6) {
+    margin-block-start: 5em;
+  }
+
+  & :is(h1, h2, h3, h4, h5, h6):has(+ p) {
     margin-block-end: 1.5em;
   }
 
-  & p {
-    margin-block: 1em;
+  & p + p {
+    margin-block-start: 1em;
   }
 
   & ul,
